添加学生数据的获取

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -54,8 +54,18 @@ body {
   position: relative;
   width: fit-content;
   z-index: 10;
-  margin: 0 0 -3.25rem auto;
+  margin: 0 0 -3.25rem 0;
   padding: 2px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
+}
+
+.action-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+  margin-left: -0.625rem;
+}
+
+.action-wrapper button {
+  white-space: nowrap;
 }
