--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -1,5 +1,5 @@
 :root {
-  --bs-font-sans-serif: Inter, '阿里巴巴普惠体 2.0', 'Source Han Sans SC', system-ui, -apple-system,
+  --bs-font-sans-serif: 'HarmonyOS Sans SC', 'Source Han Sans SC', system-ui, -apple-system,
     'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
   --bs-font-monospace: 'Fira Mono', 'JetBrains Mono', SFMono-Regular, Menlo, Monaco, Consolas,
@@ -12,6 +12,20 @@
 body {
   font-family: var(--bs-font-sans-serif);
   min-width: 1024px;
+}
+
+.background {
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: -1;
+  width: 42%;
+  height: 100vh;
+  background-color: #f6f8fa;
+  background-image: url('/background.webp');
+  background-position: top left;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .loading-screen {
