--- a/static/styles/override.css
+++ b/static/styles/override.css
@@ -6,6 +6,11 @@
   margin-right: 0.75rem !important;
 }
 
+.py-1\.5 {
+  padding-top: 0.375rem !important;
+  padding-bottom: 0.375rem !important;
+}
+
 .nav-link .btn-outline-primary,
 .dropdown .btn-outline-primary {
   background-color: #fff;
